<resources>
    <string name="app_name">ExpenseTrack</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_up">Sign up </string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Already have an account?</string>

    //Strings for fb login

    <string name="facebook_app_id">370365446717208</string>
    <string name="fb_login_protocol_scheme">fb370365446717208</string>

    <!-- Strings related to Dialog -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="amount">Enter amount here</string>
    <string name="desc">Description</string>
    <string name="welcome">Welcome to Expense Track</string>
    <string name="date">dd/mm/yy</string>

    <!-- Spinner String array -->
    <string-array name="CategoryList">
        <item>Choose a category…</item>
        <item>Food</item>
        <item>Drinks</item>
        <item>Travel</item>
        <item>Entertainment</item>
        <item>Other</item>

    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_help">Help</string>
    <string name="settings">settings</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="category_name">Category Name</string>


</resources>
