<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">


    <EditText
        android:id="@+id/et_dialog_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"/>

    <EditText
        android:id="@+id/et_dialog_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/spinnerCategory"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp" />


    <EditText
        android:id="@+id/et_dialog_desc"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/desc"
        android:inputType="textMultiLine"

        />


</LinearLayout>